# 112

./: README  build.gradle
app/: CMakeLists.txt  build.gradle
app/files/: retrofit
app/src/androidTest/java/com/example/widget/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/aidl/: IMyAidlInterface.aidl
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/people/: people.cpp  people.h
app/src/main/java/com/example/: ExampleApplication.java
app/src/main/java/com/example/algorithm/: A.java  ArrayAlgorithm.java  DataStructure.java  ExtendsTest.java  SortAlgorithm.java  ThreadAlgorithm.java  TreeNode.java
app/src/main/java/com/example/android/: Android_inter.java  Sort_algro.java
app/src/main/java/com/example/android/DesignPattern/: AbstractFactory.java  Boy.java  Girl.java  MainTest.java  Observable.java  Observer.java  PersonBuilder.java  PostMan.java  ProxyPattern.java  SingleInstanceDoubleCheck.java  SingleInstanceEnum.java  SingleInstanceTest.java
app/src/main/java/com/example/android/jni/: JniHandle.java
app/src/main/java/com/example/android/retrofit/: ApiService.java  OkhttpTest.java
app/src/main/java/com/example/java/: ThreadPoolTest.java
app/src/main/java/com/example/kotlin/: ActivityStartExtension.kt  HigherFunction.kt  MainActivity.kt  Person.kt  User.kt  ViewBindingExtension.kt
app/src/main/java/com/example/widget/: MyImageView.java
app/src/main/res/layout/: activity_main2.xml  overlay_image_ad_layout.xml
app/src/main/res/xml/: motion_scene_1.xml
(+11 files in other folders)
